boot/tests/errors/ty_errors/ty_errors.milone
let main _ =
  if false then
    f () // ERROR! Use of undefined variable.

  let deepUnificationError =
    match ((1, 2), 3) with
    | (1, "type error"), 3 -> ()

  () // ERROR! This should be an int.
